Basic version with all functionality

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,4 @@
 queueName = queueName
 brokerURL = failover://tcp://localhost:61616
 clientID = ID:DESKTOP-ME97MLP-55962-1708879633133-0:1
+poisonPill = 1
