--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,13 @@
     <groupId>shpp.app</groupId>
     <artifactId>JMSProducer</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
-
     <name>JMSProducer</name>
-    <url>http://maven.apache.org</url>
 
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.databind.version>2.15.3</jackson.databind.version>
         <jackson.dataformat.xml.version>2.15.3</jackson.dataformat.xml.version>
@@ -24,7 +22,6 @@
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <hibernate-validator-annotation-processor.version>8.0.1.Final</hibernate-validator-annotation-processor.version>
         <glassfish.expressly.version>5.0.0</glassfish.expressly.version>
-        <commons-csv.version>1.10.0</commons-csv.version>
         <logback.classic.version>1.4.14</logback.classic.version>
         <activemq-broker>5.18.3</activemq-broker>
         <activemq-pool>5.18.3</activemq-pool>
@@ -38,13 +35,6 @@
     </properties>
 
     <dependencies>
-        <!--         https://mvnrepository.com/artifact/commons-io/commons-io -->
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io}</version>
-        </dependency>
-
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -60,11 +50,6 @@
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.el</artifactId>
             <version>5.0.0-M1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>${commons-csv.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
